# mcp-hetzner

./: .env.example  .mcp.json  README.md  pyproject.toml
mcp_hetzner/: __init__.py  client.py  example.py  server.py
